# deinclude

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
